docs/_evidence_archived/ce05_m1_hardpass_20260104_162527/trigger_output.txt
node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
apps/api/src/dev/ce05_trigger.ts(129,17): error TS2322: Type '"CE05_DIRECTOR_CONTROL"' is not assignable to type 'TaskType'.

    at createTSError (node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1824:10
    at Object.require.extensions.<computed> [as .ts] (node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1427:32)
    at Module._load (node:internal/modules/cjs/loader:1250:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2322 ]
}
